Name:                Abba
Version:             0.0.1
Synopsis:            A better build architecture
License:             BSD3
License-file:        LICENSE
Author:              M. George Hansen
Maintainer:          technopolitica@gmail.com
Category:            Development
Build-type:          Simple
Extra-source-files:  README.txt
Cabal-version:       >=1.6

source-repository head
  type:     git
  location: git://github.com/technopolitica/Abba.git

Library
  Exposed-modules:     Development.Abba
  Build-depends:       base >4 && <5, containers -any, directory -any,
                       process -any

